[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = [
    "Alia McCutcheon <alia.mccutcheon@gmail.com>",
] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

# [features]
# dev = ["bevy/dynamic_linking"] # Needs to be disabled if you want to use renderdoc

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "bevy_pbr",
    "bevy_gizmos",
    "file_watcher",
    "default_font",
    "shader_format_spirv",
    "shader_format_glsl",
    # "shader_format_hlsl", <-- no such thing :(
    "bevy_debug_stepping",
    "webgl2",
] }
bevy_kira_audio = { version = "0.19" }
bevy_asset_loader = { version = "0.20.1" }
bevy-inspector-egui = "0.24.0"
bevy_pixel_buffer = { path = "../bevy_pixel_buffer" }
bevy_shader_utils = "0.7.0"
bevy_camera_extras = "0.3.0"

inline-spirv = "0.2.1"
jit-spirv = "0.1.1"

serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"

shaderc = { version = "0.8.3", features = ["build-from-source"] }
bytemuck = "1.15.0"
rand = { version = "0.8.5" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29", default-features = false }
image = { version = "0.24", default-features = false }
wgpu = "0.19.4"

[build-dependencies]
embed-resource = "2.4.2"
wgsl_to_wgpu = { path = "../wgsl_to_wgpu_bevy/wgsl_to_wgpu" }
